100% zoom in out fixed

--- a/index.html
+++ b/index.html
@@ -171,8 +171,8 @@
                     </div>
                     <div class="course">
                         <img src="./images/course/course-2.png" alt="">
-                        <h3 class="course-title">Powerpoint 2020</h3>
-                        <h3 class="course-title">Master Powerpoint Course</h3>
+                        <h3 class="course-title">Powerpoint 2020 Master</h3>
+                        <h3 class="course-title">Powerpoint Course</h3>
                         <h4 class="course-instructor">Walter Scott</h4>
                         <div class="course-details">
                             <div class="ratings-star">
